Fix build with differently unified souces https://bugs.webkit.org/show_bug.cgi?id=231589

Patch by Alex Christensen <achristensen@webkit.org> on 2021-10-12
Reviewed by Simon Fraser.

shadowPaintingExtent was only defined in DisplayListRecorder.cpp and only used in DisplayListRecorderImpl.cpp

* platform/graphics/displaylists/DisplayListRecorder.cpp:
(WebCore::DisplayList::shadowPaintingExtent): Deleted.
* platform/graphics/displaylists/DisplayListRecorderImpl.cpp:
(WebCore::DisplayList::shadowPaintingExtent):

Canonical link: https://commits.webkit.org/242839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283995 268f45cc-cd09-0410-ab3c-d52691b4dbfc