Source/WebCore/platform/graphics/displaylists/DisplayListRecorder.cpp
@@ -501,16 +501,6 @@ FloatRect Recorder::roundToDevicePixels(const FloatRect& rect, GraphicsContext::
     return rect;
 }
 
-// FIXME: share with ShadowData
-static inline float shadowPaintingExtent(float blurRadius)
-{
-    // Blurring uses a Gaussian function whose std. deviation is m_radius/2, and which in theory
-    // extends to infinity. In 8-bit contexts, however, rounding causes the effect to become
-    // undetectable at around 1.4x the radius.
-    const float radiusExtentMultiplier = 1.4;
-    return ceilf(blurRadius * radiusExtentMultiplier);
-}
-
 const Recorder::ContextState& Recorder::currentState() const
 {
     ASSERT(m_stateStack.size());
