Source/WebCore/platform/graphics/displaylists/DisplayListRecorderImpl.cpp
@@ -431,6 +431,16 @@ void RecorderImpl::recordResourceUse(ImageBuffer& imageBuffer)
     m_displayList.cacheImageBuffer(imageBuffer);
 }
 
+// FIXME: share with ShadowData
+static inline float shadowPaintingExtent(float blurRadius)
+{
+    // Blurring uses a Gaussian function whose std. deviation is m_radius/2, and which in theory
+    // extends to infinity. In 8-bit contexts, however, rounding causes the effect to become
+    // undetectable at around 1.4x the radius.
+    const float radiusExtentMultiplier = 1.4;
+    return ceilf(blurRadius * radiusExtentMultiplier);
+}
+
 FloatRect RecorderImpl::extentFromLocalBounds(const FloatRect& rect) const
 {
     FloatRect bounds = rect;
